# benchmarks

./: .gitignore  Makefile  README.md  results.txt
aegis-128x2-aesni/: 128x2-common.h  Makefile  benchmark.c  crypto_declassify.h  crypto_verify_16.h  crypto_verify_32.h  encrypt.c  test.c
aegis-128x2-arm/: Makefile  benchmark.c  crypto_aead.h  test.c  timing.h
aegis-128x2-vaes/: Makefile  benchmark.c  encrypt.c  test.c
aegis-128x4-avx512/: 128x4-common.h  Makefile  api.h  benchmark.c  common.h  encrypt.c  test.c  timing.h
aes128-gcm-openssl/: Makefile  api.h  benchmark.c  crypto_aead.h  encrypt.c  test.c
benchmark-visualizer/: README.md  benchmark_parser.py  benchmark_visualizer.py  demo.py  examples.py  main.py  plot_config.py  plot_performance.py  pyproject.toml  real_data_demo.py  test_visualizer.py
hiae/: HiAE_amalgamated.c  Makefile  benchmark.c  encrypt.c  timing.h
hiaex2/: Makefile  benchmark.c  encrypt.c  test.c  timing.h
hiaex4/: Makefile  api.h  benchmark.c  encrypt.c  test.c  timing.h
rocca-s/: Makefile  performance_test.c  rocca-s.c  rocca-s_arm.c  timing.h
rocca-sx2/: Makefile  performance_test.c  rocca-sx2.c  rocca-sx2.h
rocca-sx4/: Makefile  performance_test.c  rocca-sx4.c  rocca-sx4.h
