[project]
name = "benchmark-visualizer"
version = "0.1.0"
description = "Visualizer for cryptographic benchmark results"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"